Extend .block-views CSS to .block-system (formatting Views pages like Views blocks)

--- a/css/style.css
+++ b/css/style.css
@@ -7227,60 +7227,96 @@ table .checkbox input[type="checkbox"] {
 }
 .content-region .block-views .block-panel .block-title,
 .sidebar-1-region .block-views .block-panel .block-title,
-.sidebar-2-region .block-views .block-panel .block-title {
+.sidebar-2-region .block-views .block-panel .block-title,
+.content-region .block-system .block-panel .block-title,
+.sidebar-1-region .block-system .block-panel .block-title,
+.sidebar-2-region .block-system .block-panel .block-title {
   padding: 10px 10px 10px 70px;
   margin-top: 0;
 }
 .content-region .block-views .block-panel .block-title i,
 .sidebar-1-region .block-views .block-panel .block-title i,
-.sidebar-2-region .block-views .block-panel .block-title i {
+.sidebar-2-region .block-views .block-panel .block-title i,
+.content-region .block-system .block-panel .block-title i,
+.sidebar-1-region .block-system .block-panel .block-title i,
+.sidebar-2-region .block-system .block-panel .block-title i {
   width: 70px;
   margin-left: -70px;
 }
 .content-region .block-views .block-panel .view-content,
 .sidebar-1-region .block-views .block-panel .view-content,
-.sidebar-2-region .block-views .block-panel .view-content {
+.sidebar-2-region .block-views .block-panel .view-content,
+.content-region .block-system .block-panel .view-content,
+.sidebar-1-region .block-system .block-panel .view-content,
+.sidebar-2-region .block-system .block-panel .view-content {
   padding: 0 10px 10px 10px;
 }
 .content-region .block-views .block-panel h3,
 .sidebar-1-region .block-views .block-panel h3,
-.sidebar-2-region .block-views .block-panel h3 {
+.sidebar-2-region .block-views .block-panel h3,
+.content-region .block-system .block-panel h3,
+.sidebar-1-region .block-system .block-panel h3,
+.sidebar-2-region .block-system .block-panel h3 {
   padding-left: 25px;
 }
 .content-region .block-views .block-panel h3 i,
 .sidebar-1-region .block-views .block-panel h3 i,
-.sidebar-2-region .block-views .block-panel h3 i {
+.sidebar-2-region .block-views .block-panel h3 i,
+.content-region .block-system .block-panel h3 i,
+.sidebar-1-region .block-system .block-panel h3 i,
+.sidebar-2-region .block-system .block-panel h3 i {
   width: 35px;
   margin-left: -35px;
 }
 .content-region .block-views .block-panel .field-content h3,
 .sidebar-1-region .block-views .block-panel .field-content h3,
-.sidebar-2-region .block-views .block-panel .field-content h3 {
+.sidebar-2-region .block-views .block-panel .field-content h3,
+.content-region .block-system .block-panel .field-content h3,
+.sidebar-1-region .block-system .block-panel .field-content h3,
+.sidebar-2-region .block-system .block-panel .field-content h3 {
   padding-left: 0;
 }
 .content-region .block-views .block-panel .views-field,
 .sidebar-1-region .block-views .block-panel .views-field,
-.sidebar-2-region .block-views .block-panel .views-field {
+.sidebar-2-region .block-views .block-panel .views-field,
+.content-region .block-system .block-panel .views-field,
+.sidebar-1-region .block-system .block-panel .views-field,
+.sidebar-2-region .block-system .block-panel .views-field {
   padding-left: 60px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-image,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-image,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-image,
+.content-region .block-system .block-panel .views-field.views-field-field-image,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-image,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-image,
 .content-region .block-views .block-panel .views-field.views-field-field-series-image,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-series-image,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-field-series-image {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-series-image,
+.content-region .block-system .block-panel .views-field.views-field-field-series-image,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-series-image,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-series-image {
   float: left;
   margin-left: -60px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-is-audio,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-audio,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-audio,
+.content-region .block-system .block-panel .views-field.views-field-field-is-audio,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-audio,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-audio,
 .content-region .block-views .block-panel .views-field.views-field-field-is-text,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-text,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-text,
+.content-region .block-system .block-panel .views-field.views-field-field-is-text,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-text,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-text,
 .content-region .block-views .block-panel .views-field.views-field-field-is-video,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-video,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-video {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-video,
+.content-region .block-system .block-panel .views-field.views-field-field-is-video,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-video,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-video {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.1;
@@ -7292,21 +7328,39 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-views .block-panel .views-field.views-field-field-is-audio small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-audio small,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-audio small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-audio small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-audio small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-audio small,
 .content-region .block-views .block-panel .views-field.views-field-field-is-text small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-text small,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-text small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-text small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-text small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-text small,
 .content-region .block-views .block-panel .views-field.views-field-field-is-video small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-video small,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-video small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-video small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-video small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-video small,
 .content-region .block-views .block-panel .views-field.views-field-field-is-audio .small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-audio .small,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-audio .small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-audio .small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-audio .small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-audio .small,
 .content-region .block-views .block-panel .views-field.views-field-field-is-text .small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-text .small,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-text .small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-text .small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-text .small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-text .small,
 .content-region .block-views .block-panel .views-field.views-field-field-is-video .small,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-is-video .small,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-video .small {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-is-video .small,
+.content-region .block-system .block-panel .views-field.views-field-field-is-video .small,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-is-video .small,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-is-video .small {
   font-weight: normal;
   line-height: 1;
   color: #999999;
@@ -7314,25 +7368,43 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-views .block-panel .views-field.views-field-field-short-form,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-short-form,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-short-form,
+.content-region .block-system .block-panel .views-field.views-field-field-short-form,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-short-form,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-short-form,
 .content-region .block-views .block-panel .views-field.views-field-webform-form-body,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-webform-form-body,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-webform-form-body {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-webform-form-body,
+.content-region .block-system .block-panel .views-field.views-field-webform-form-body,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-webform-form-body,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-webform-form-body {
   padding-left: 0;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-short-form .form-item,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-short-form .form-item,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-short-form .form-item,
+.content-region .block-system .block-panel .views-field.views-field-field-short-form .form-item,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-short-form .form-item,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-short-form .form-item,
 .content-region .block-views .block-panel .views-field.views-field-webform-form-body .form-item,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-webform-form-body .form-item,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-webform-form-body .form-item {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-webform-form-body .form-item,
+.content-region .block-system .block-panel .views-field.views-field-webform-form-body .form-item,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-webform-form-body .form-item,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-webform-form-body .form-item {
   margin-bottom: 10px;
 }
 .content-region .block-views .block-panel .views-field.views-field-field-date-text,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-date-text,
 .sidebar-2-region .block-views .block-panel .views-field.views-field-field-date-text,
+.content-region .block-system .block-panel .views-field.views-field-field-date-text,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-date-text,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-date-text,
 .content-region .block-views .block-panel .views-field.views-field-field-episode-date,
 .sidebar-1-region .block-views .block-panel .views-field.views-field-field-episode-date,
-.sidebar-2-region .block-views .block-panel .views-field.views-field-field-episode-date {
+.sidebar-2-region .block-views .block-panel .views-field.views-field-field-episode-date,
+.content-region .block-system .block-panel .views-field.views-field-field-episode-date,
+.sidebar-1-region .block-system .block-panel .views-field.views-field-field-episode-date,
+.sidebar-2-region .block-system .block-panel .views-field.views-field-field-episode-date {
   font-style: italic;
 }
 .content-region .block-system .block-panel .content {
