--- a/less/content.less
+++ b/less/content.less
@@ -74,65 +74,67 @@
 }
 
 .content-region, .sidebar-1-region, .sidebar-2-region {
-	.block-views .block-panel {
-		.block-title {
-			padding: 10px 10px 10px 70px;
-			margin-top: 0;
+	.block-views, .block-system {
+		.block-panel {
+			.block-title {
+				padding: 10px 10px 10px 70px;
+				margin-top: 0;
 
-			i {
-				width: 70px;
-				margin-left: -70px;
-			}
-		}
-
-		.view-content {
-			padding: 0 10px 10px 10px;
-		}
-
-		h3 {
-			padding-left: 25px;
-
-			i {
-				width: 35px;
-				margin-left: -35px;
-			}
-		}
-
-		.field-content {
-			h3 {
-				padding-left: 0; // Undoing the 35px padding-left inside fields
-			}
-		}
-
-		.views-field {
-			padding-left: 60px;
-
-			&.views-field-field-image,
-			&.views-field-field-series-image {
-				float: left;
-				margin-left: -60px;
-			}
-
-			&.views-field-field-is-audio,
-			&.views-field-field-is-text,
-			&.views-field-field-is-video {
-				.h1;
-				float: left;
-				margin-left: -50px;
-			}
-
-			&.views-field-field-short-form,
-			&.views-field-webform-form-body {
-				padding-left: 0;
-
-				.form-item {
-					margin-bottom: 10px;
+				i {
+					width: 70px;
+					margin-left: -70px;
 				}
 			}
 
-			&.views-field-field-date-text,
-			&.views-field-field-episode-date {
-				font-style: italic;
+			.view-content {
+				padding: 0 10px 10px 10px;
+			}
+
+			h3 {
+				padding-left: 25px;
+
+				i {
+					width: 35px;
+					margin-left: -35px;
+				}
+			}
+
+			.field-content {
+				h3 {
+					padding-left: 0; // Undoing the 35px padding-left inside fields
+				}
+			}
+
+			.views-field {
+				padding-left: 60px;
+
+				&.views-field-field-image,
+				&.views-field-field-series-image {
+					float: left;
+					margin-left: -60px;
+				}
+
+				&.views-field-field-is-audio,
+				&.views-field-field-is-text,
+				&.views-field-field-is-video {
+					.h1;
+					float: left;
+					margin-left: -50px;
+				}
+
+				&.views-field-field-short-form,
+				&.views-field-webform-form-body {
+					padding-left: 0;
+
+					.form-item {
+						margin-bottom: 10px;
+					}
+				}
+
+				&.views-field-field-date-text,
+				&.views-field-field-episode-date {
+					font-style: italic;
+				}
 			}
 		}
 	}
