--- a/less/header.less
+++ b/less/header.less
@@ -41,6 +41,10 @@
 		color: white;
 		background: @cbf-light-blue;
 
+		.block + .block {
+			margin-top: 20px;
+		}
+
 		.nav {
 			li {
 				.dropdown-menu li {
