--- a/less/header.less
+++ b/less/header.less
@@ -34,6 +34,14 @@
 	}
 }
 
+.city-adelaide 	.menu-adelaide,
+.city-brisbane	.menu-brisbane,
+.city-perth	.menu-perth,
+.city-melbourne	.menu-melbourne,
+.city-sydney	.menu-sydney {
+	font-weight: bold;
+}
+
 #page-header {
 	.region-header {
 		.well;
