--- a/less/content.less
+++ b/less/content.less
@@ -110,6 +110,18 @@
 				padding: 0 10px 10px 10px;
 			}
 
+			.views-exposed-form {
+				.views-exposed-widget {
+					padding: 0;
+					margin: 10px 10px 0;
+
+					.container-inline-date .form-text,
+					.form-type-select .form-select {
+							width: 100px;
+					}
+				}
+			}
+
 			h3 {
 				padding-left: 25px;
 
