--- a/less/content.less
+++ b/less/content.less
@@ -167,6 +167,10 @@
 				&.views-field-field-episode-date {
 					font-style: italic;
 				}
+
+				&.views-field-taxonomy-vocabulary-1 {
+					font-weight: bold;
+				}
 			}
 
 			.more-link {
