Pad .block-block .block-panel by 10px on sides and bottom

--- a/less/content.less
+++ b/less/content.less
@@ -41,6 +41,7 @@
 	.block-system .block-panel {
 		.panel;
 		.panel-variant(white; @cbf-dark-blue; white; white);
+
 		box-shadow: 0 0 0 white;
 	}
 
@@ -212,6 +213,10 @@
 				font-size: @font-size-base;
 			}
 		}
+	}
+
+	.block-block .block-panel {
+		padding: 0 10px 10px 10px;
 	}
 }
 
