--- a/css/style.css
+++ b/css/style.css
@@ -7729,6 +7729,11 @@ table .checkbox input[type="checkbox"] {
   text-transform: capitalize;
   font-size: 14px;
 }
+.content-region .block-block .block-panel,
+.sidebar-1-region .block-block .block-panel,
+.sidebar-2-region .block-block .block-panel {
+  padding: 0 10px 10px 10px;
+}
 .content-region .block-system .block-panel .content {
   padding: 10px;
 }
