Set side margins on .block-block .block-panel .block-title to -10px

--- a/less/content.less
+++ b/less/content.less
@@ -217,6 +217,11 @@
 
 	.block-block .block-panel {
 		padding: 0 10px 10px 10px;
+
+		.block-title {
+			margin-left: -10px; 
+			margin-right: -10px; 
+		}
 	}
 }
 
