--- a/css/style.css
+++ b/css/style.css
@@ -7734,6 +7734,12 @@ table .checkbox input[type="checkbox"] {
 .sidebar-2-region .block-block .block-panel {
   padding: 0 10px 10px 10px;
 }
+.content-region .block-block .block-panel .block-title,
+.sidebar-1-region .block-block .block-panel .block-title,
+.sidebar-2-region .block-block .block-panel .block-title {
+  margin-left: -10px;
+  margin-right: -10px;
+}
 .content-region .block-system .block-panel .content {
   padding: 10px;
 }
